--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
     "firebase": "^10.11.0",
     "handlebars": "^4.7.8",
     "lucide-static": "^0.365.0",
