--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "dayjs": "^1.11.10",
     "firebase": "^10.11.0",
     "handlebars": "^4.7.8",
